<resources>
    <string name="app_name">WFP Follow UPs</string>
    <string name="app_name15">MaPPS - Form 15: Exit Questionnaire </string>
    <string name="app_name16">MaPPS - Form 16: End of Study Participation </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="end_interview">اختتام </string>
    <string name="start_interview"> انٹروہو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="Seca"> معلومات براء سڃاڻپ </string>
    <string name="Secb">  آخري ماهواري جي نشاندهي </string>
    <string name="form5">الٽراسائونڊ جو معائنو</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other">  دیگر وضاحت کریں </string>
    <string name="dkn"> معلوم نہیں/یاد نہیں </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="na">کوئی بھی نہیں</string>
    <string name="na1">لاگو نہیں ہوتا</string>
    <string name="male"> مرد </string>
    <string name="female"> عورت </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="day"> دن </string>
    <string name="weeks"> ہفتہ </string>
    <string name="hours"> گھنٹوں </string>
    <string name="times"> تعداد </string>
    <string name="gl"> g/dL </string>
    <string name="not_applicable">Not Applicable</string>
    <string name="reason">وجہ</string>
    <string name="pw_name">حاملہ خاتون کا نام </string>
    <string name="child_name">بچے کا نام </string>
    <string name="pw_detail"> حاملہ خاتون کی تفصیل </string>
    <string name="child_detail"> بچے کی تفصیل </string>
    <string name="mp08a001"> خاندا ن نمبر </string>
    <string name="mp08a002"> شرڪت ڪندڙ جو شناخت نمبر </string>
    <string name="mp08a003"> شرڪت ڪندڙ جو نالو </string>
    <string name="mp08a005"> گھر جي سربراه جو نالو </string>
    <string name="mp08a008"> رابطي لاء نمبر </string>
    <string name="mp08a006"> ڳوٺ جو نالو </string>
    <string name="mp08a007"> مڪمل پتو </string>
    <string name="mp08a013"> زباني رضامندي </string>
    <string name="mp08a014"> انٹرویو کا نتیجہ </string>
    <string name="mp08a01401"> مکمل</string>
    <string name="mp08a01402">  جزوی مکمل </string>
    <string name="mp08a01403"> انکار </string>
    <string name="mp08a01404"> گھرانہ کے تمام افراد لمبے عرصے کے لیے گھر سے غیر حاضر تھے </string>
    <string name="mp08a01405"> منتقل ہوگئ </string>
    <string name="mp08a01406">Ultrasound not done </string>
    <string name="mp08a01407">انتقال کرگئ  </string>
    <string name="none"> کوئی بھی نہیں </string>
    <string name="pfaheading"> شناخت </string>
    <string name="pfa01"> کلسٹر کی قسم </string>
    <string name="pfa01a"> انٹروینشن </string>
    <string name="pfa01b"> کنٹرول </string>
    <string name="studyID">  خاتون کا شناخت نمبر </string>
    <string name="pfa03"> حاملہ خاتون یا دودھ پلانے والی ماں کا فالواپ نمبر </string>
    <string name="pfa03a"> فالواپ نمبر </string>
    <string name="pfa04"> خا تون کی قسم </string>
    <string name="pfa04a"> حاملہ خاتون </string>
    <string name="pfa04b"> دودھ پلانے والی ماں بچے سمیت  </string>
    <string name="pfa05"> فالو اپ کی تاریخ </string>
    <string name="pfa06">زبانی رضامندی </string>
    <string name="pfbheading"> حاملہ خاتون  / دودھ پلانے والی ماں/بچہ کی موجودہ حیثیت </string>
    <string name="pfb01"> کیا حاملہ خاتون یا دودھ پلانے والی ماں انٹرویو کے لئے دستیاب ہے؟ </string>
    <string name="pfb0101">اگر انکار کیا تو انکار کی وجہ کیا تھی؟</string>
    <string name="pfb0102">دودھ پلانے ماں کے وفات کی تاریخ</string>
    <string name="pfb0103">دودھ پلانے ماں کے وفات کی وجوہات</string>
    <string name="pfb01a"> موجود ہے انٹرویو جاری رکھیں </string>
    <string name="pfb01b"> وقتی طور پر موجود نہیں </string>
    <string name="pfb01c"> دورے کے دوران گھر بندتھا </string>
    <string name="pfb01d"> موجود نہیں </string>
    <string name="pfb01e"> ہمیشہ کے لئے جا چکے ہیں </string>
    <string name="pfb01f"> انکار کردیا </string>
    <string name="pfb01g"> انتقال ہو گیا </string>
    <string name="pfb02"> حاملہ خاتون یا دودھ پلانے والی ماں کی موجودہ حیثیت کیا ہے؟ </string>
    <string name="pfb02a"> اس وقت حمل سے ہیں </string>
    <string name="pfb02b"> حمل سے نہیں </string>
    <string name="pfb02c"> حمل ضائع ہو گیا/اسقاط حمل </string>
    <string name="pfb02d"> مردہ بچہ پیدا ہوا تھا </string>
    <string name="pfb02e"> زندہ بچہ پیدا ہوا ہےاوراس وقت زندہ ہے </string>
    <string name="pfb02f"> زندہ بچہ پیدا ہوا تھا لیکن بعد میں انتقال ہو گیا </string>
    <string name="pfb02g"> جڑواں بچوں کی پیدائش (1 زندہ بچہ 1 مردہ بچہ) </string>
    <string name="pfb02h"> جڑواں بچوں کی پیدائش (2 زندہ بچے) </string>
    <string name="pfb03"> موجودہ حمل کا مہینہ؟ </string>
    <string name="pfb03a"> مہینے </string>
    <string name="pfb04">  تاریخ پیدائش </string>
    <string name="pfb05">تاریخ وفات </string>
    <string name="pfb06">وفات کی وجوہات</string>
    <string name="pfcheading"> حاملہ خاتون  / دودھ پلانے والی ماں کی قد اور وزن کی پیما ئش:  دوران حمل اور ابتدائی 6 ماہ کے دوران دودھ پلانے والی ماؤں کے لیے قابل اطلاق ہے </string>
    <string name="pfc01"> وزن کی جانچ </string>
    <string name="pfc01a"> کلو گرام </string>
    <string name="pfc02"> خون کی مقدار کا نتیجہ </string>
    <string name="pfc02sub">خون کی مقدار کا نتیجہ صرف 9 ماہ کے حمل کے پورے ہونے پر</string>
    <string name="pfdheading"> حاملہ خاتون  / دودھ پلانے والی ماں: دوران حمل اور ابتدائی 6 ماہ کے دوران دودھ پلانے والی ماؤں کے لیے قابل اطلاق ہے </string>
    <string name="pfd01"> کیا آپ کوگزشتہ مہینے کے دوران مامتا کے ساشے ملے تھے؟ </string>
    <string name="pfd01c"> لینے سے انکار کردیا </string>
    <string name="pfd02"> آپ نے گزشتہ ایک ماہ میں اپنے لیے کتنے مامتا کے ساشے موصول کیے تھے؟ </string>
    <string name="pfd02a"> مامتا کےکتنے ساشے ملے تعداد لکھیں </string>
    <string name="pfd03"> ایک دن میں آپ نے کتنے ساشے استعمال کیےتھے؟ </string>
    <string name="pfd03a"> ساشے </string>
    <string name="pfd04"> آپ نے گزشتہ ایک ماہ میں کتنے دن اور کتنے ساشے استعمال کیے تھے؟ </string>
    <string name="pfd04a"> دن </string>
    <string name="pfd04b"> ساشے </string>
    <string name="pfd05"> کیا آپ مجھے استعمال شدہ اور غیر استعمال شدہ ساشے کے پیکٹ دیکھا سکتے ہیں؟ (اگر موجود نہیں تو (00) لکھیں </string>
    <string name="pfd05a"> استعمال شدہ پیکٹ دیکھائیں </string>
    <string name="pfd05b"> بغیر استعمال شدہ پیکٹ دیکھائیں </string>
    <string name="pfd06">کیا آپ نے گزشتہ ایک ماہ میں مامتا کے  کھانے کی وجہ سے  کوئی منفی اثرات دیکھے ؟  </string>
    <string name="pfd07"> اگر ہاں تو وہ منفی اثرات کیا تھے؟ </string>
    <string name="pfd07a"> دست </string>
    <string name="pfd07b"> الٹی </string>
    <string name="pfd07c"> پیٹ کا درد </string>
    <string name="pfd07d"> جسم پے دانے </string>
    <string name="pfd08"> کیا گزشتہ ایک ماہ کے دوران آپ نے مامتا کسی اور کے ساتھ تقسیم کیا یا کسی اور کو بھی کھانے کیلئے دیئے تھے؟ </string>
    <string name="pfd09"> اگر ہاں تو کس کو تقسیم کئیے یا دیئے تھے؟ </string>
    <string name="pfd09a"> اپنے بچوں کو </string>
    <string name="pfd09b"> پڑوسی گھروں کے ساتھ </string>
    <string name="pfd09c"> بڑوں کے ساتھ </string>
    <string name="pfd10"> گزشتہ ایک ماہ کے دوران کتنے ساشے تقسیم کیے تھے؟ </string>
    <string name="pfd10a"> ساشے </string>
    <string name="pfd11"> دوسرں کے ساتھ ساشے تقسیم کرنے کی کیا وجوہات تھیں؟ </string>
    <string name="pfd11a"> منع نہیں کر سکتے </string>
    <string name="pfd11b"> ذائقہ اچھا تھا </string>
    <string name="pfd11c"> مجھے یقین تھا یہ دوسرے بچوں/بڑوں کے لئے فائدہ مند ہے۔ </string>
    <string name="pfd12"> مامتا نہ کھانے، وصول نہ کرنے اور استعمال نہ کرنے کی وجوہات کیا ہیں؟ </string>
    <string name="pfd12a"> ذائقہ اچھا نہیں / خراب ذائقہ </string>
    <string name="pfd12b"> اسہال کا سبب </string>
    <string name="pfd12c"> قے کا سبب </string>
    <string name="pfd12d"> پیٹ کے درد کا سبب </string>
    <string name="pfd12e"> جسم پے دانوں کاسبب </string>
    <string name="pfd12f"> مذہب میں منع ہے </string>
    <string name="pfd12g"> یہ خاندانی منصوبہ بندی کے لیے ہے </string>
    <string name="pfeheading">حاملہ خاتون یا دودھ پلانے والی ماں کے لئے کم سے کم غذائی مقدار : دوران حمل اور ابتدائی 6 ماہ کے دوران دودھ پلانے والی ماؤں کے لیے قابل اطلاق ہے</string>
    <string name="pfesub"> براہ مہربانی کھانے کی اشیاء (کھانے اور ہلکی غذائیں) جو کہ کل دن یا رات کے دوران گھر میں یا گھر سے باہر کھایا یا پیا وضاحت کریں ۔صبح سویرے جو پہلی غذا یا یا مشروب کھایا پیا اس سے شروع کریں ۔ </string>
    <string name="pfesub1"> اوپر دیئے ہوئے کھانے یا پینے کے بارے میں لکھیں ۔اجزاء کی فہرست میں سے پوچھیں جن میں کھانے اور پینے والی اجزا ء کا ذکر نہیں ہے ان کے بارے میں مزید تحقیقات کریں </string>
    <string name="pfe01"> اناج </string>
    <string name="pfe01e"> دلیہ ، روٹی ، چاول مکئی کے دانے ، مکئی ، گندم ، جوار ، باجرا، یا دیگر دانے یا خوارک جو ان چیزوں سے بنایا گیا ہو مثال کے طور پر روٹی ، نوڈلس ، دلیہ یا دیگر اناج کی مصنوعات سے بنایا +دیگرمقامی طور پردستیاب اناج (جیسے سویاں ، ڈبل روٹی ، چپاتی ،گھی والا پراٹھا) </string>
    <string name="pfe02"> سفید جڑوں اور نباتیات </string>
    <string name="pfe02e"> سفید آلو،شکر قندی( ایک قسم کا میٹھا آلو) سفید شکرقندی جڑوں سے بنی (مثال کے طور پر سبز پیاز ،مولی ، ادرک وغیرہ) </string>
    <string name="pfe03"> دالیں </string>
    <string name="pfe03e"> دالیں مٹر، پیز وغیرہ </string>
    <string name="pfe04"> پھلی ، گرے دار میوے اور بیچ </string>
    <string name="pfe04e"> پھلیاں ، گرے دار میوے ، بیج ،یا ان سے بنے کھانے کی چیزیں (مشلاً تل کے بیج ، سونف کے بیج ،بایان کا پھل ، سیاہ زیرہ غیرہ </string>
    <string name="pfe05"> دودھ اور دودھ کی مصنوعات </string>
    <string name="pfe05e"> دودھ ، پنیر ، دہی،یا دیگر دودھ کی مصنوعات </string>
    <string name="pfe06"> اعضاء کا گوشت </string>
    <string name="pfe06e"> جگر ، گردے ، دلیا دوسر ے اعضاءکے گوشت یا خون کی بنیاد پر کھانے کی اشیاء </string>
    <string name="pfe07"> گوشت </string>
    <string name="pfe07e"> بڑا گوشت ، بھیڑ کا بچہ ، بکری ،خرگوش ، ہرن ، چکن، بطخ، اور دوسرے پرندے (مشلاً تیتر ،بٹیر ، شتر مرغ جنگلی بطخ، وغیرہ </string>
    <string name="pfe08"> مچھلی </string>
    <string name="pfe08e"> تازہ یا خشک مچھلی یا سمندری خول والا یا جھنگا مچھلی </string>
    <string name="pfe09"> انڈے </string>
    <string name="pfe09e"> چکن، بطخ، شتر مرغ یا دیگر کوئی انڈا </string>
    <string name="pfe10"> سبز پتوں والی سبزیاں </string>
    <string name="pfe10e"> سبز پتوں والی جن میں جنگلی یا مقامی دستیاب پتے جیسےسلاد کے پتے (فولادی قوت کی حامل سبزیاں پالک ، سرسوں کےپتے، گوبی ، مٹر ، سبز لہسن ، پودینہ ، چیرا، متیرا، وغیرہ) </string>
    <string name="pfe11"> وٹا من اے سے بھر پور سبزیاں اور نباتیات (آلو پیاز) </string>
    <string name="pfe11e"> کدو،گاجر کچلی ہوئی یا میٹھاآلو جو کہ اندر سے پیلا یا نارنجی یا مالٹے جیسا ہو + دیگرمقامی طور پردستیاب وٹامن اے سے بھر پور سبزیاں (مثال کے طور پر سرخ میتھی ، اوری کے پتے ، دھنیہ کے پتے ، پیاز کے پتے، میتھی کے پتے،شملہ مرچ ، گوبی ، کھیرا، بکری کا گوشت ، شلجم ، چقندر، وغیرہ۔) </string>
    <string name="pfe12"> وٹا من اے سے بھر پورپھل </string>
    <string name="cfa01"> بچے کی ID </string>
</resources>