<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ending"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.aku.hassannaqvi.wfp_followups.activities.EndingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/mp08a014"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/mp08a014"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/mp08a01401"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01401" />

                <RadioButton
                    android:id="@+id/mp08a01402"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01402" />

                <RadioButton
                    android:id="@+id/mp08a01403"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01403" />

                <RadioButton
                    android:id="@+id/mp08a01404"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01404" />

                <RadioButton
                    android:id="@+id/mp08a01405"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01405" />

                <RadioButton
                    android:id="@+id/mp08a01406"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp08a01407" />

                <!--<RadioButton-->
                <!--android:id="@+id/mp08a01406"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/mp08a01406"-->
                <!--android:visibility="gone" />-->

                <!--<RadioButton-->
                <!--android:id="@+id/mp08a01407"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/mp08a01406"-->
                <!--android:visibility="gone" />-->


            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="endInterview"
                    android:padding="2dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e"
                    android:textSize="32sp" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
