<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.wfp_followups.activities.SectionBActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingRight="14dp">

            <!--Q1-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:id="@+id/fldgrppfb01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/pfb01"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/pfb01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/pfb01a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01a" />

                        <RadioButton
                            android:id="@+id/pfb01b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01b" />

                        <RadioButton
                            android:id="@+id/pfb01c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01c" />

                        <RadioButton
                            android:id="@+id/pfb01d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01d" />

                        <RadioButton
                            android:id="@+id/pfb01e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01e" />

                        <RadioButton
                            android:id="@+id/pfb01f"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01f" />

                        <RadioButton
                            android:id="@+id/pfb01g"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb01g" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Q2-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:id="@+id/fldgrppfb02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/pfb02"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/pfb02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/pfb02a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02a" />

                        <RadioButton
                            android:id="@+id/pfb02b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02b" />

                        <RadioButton
                            android:id="@+id/pfb02c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02c" />

                        <RadioButton
                            android:id="@+id/pfb02d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02d" />

                        <RadioButton
                            android:id="@+id/pfb02e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02e" />

                        <RadioButton
                            android:id="@+id/pfb02f"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/pfb02f" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Q3-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:id="@+id/fldgrppfb03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/pfb03"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/pfb03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pfb03" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--04-->
            <android.support.v7.widget.CardView
                android:id="@+id/fldgrppfb04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/pfb04"
                        android:textColor="@color/white" />

                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                        android:id="@+id/pfb04"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:focusable="false"
                        android:hint="DD/MM/YYYY"
                        android:textColor="@android:color/black"
                        app:dateFormat="dd-MM-yyyy" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--================End Buttons======================-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:padding="2dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:padding="2dp"
                    android:text="@string/nextSection"
                    android:textColor="@color/whiteOverlay"
                    android:textSize="32sp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</layout>
