<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <import type="android.view.View" />
    <variable
        name="callback"
        type="edu.aku.hassannaqvi.wfp_followups.activities.ChildInfoActivity" />
</data>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/cfa01"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="2"
                android:elevation="1dp"
                android:onClick='@{ () -> callback.onCheckChildClick()}'
                android:padding="2dp"
                android:text="CHECK"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cstudyID"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cfa01"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fldGrpChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/child_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <!--View Data-->
            <include
                android:id="@+id/viewGroup02"
                layout="@layout/child_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/pfa06"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/cfa06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cfa06a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/cfa06b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:onClick='@{ () -> callback.onBtnContinueClick()}'
                    android:padding="2dp"
                    android:text="@string/nextSection"
                    android:textSize="32sp"
                    android:visibility="visible" />
                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->


                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick='@{ () -> callback.onBtnEndClick()}'
                    android:padding="2dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e"
                    android:textSize="32sp" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>


</layout>
